# SIG25_goldschmiedrisse

./: .gitignore  README.md  index.html  native_utils.wasm  tn_ob1.jp2  tn_ob2.jp2
web/: CMakeLists.txt  index.css  index.html  native_utils.js  native_utils.wasm  package.json
web/cpp/: Bezier.cpp  Bezier.h  Polynomial.cpp  Polynomial.h  binding.cpp  conversions.h  intersect.cpp  intersect.h  mc_flow.cpp  mc_flow.h  structure.cpp  structure.h  triangulation.cpp  triangulation.h
web/data/: 3d-scan-final.uc  3d-sym7-l1.uc  3d-sym7-l2.uc  3d-sym7-l3.uc  3d-sym7-l4.uc  3d_scan.uc  3d_scan_final_final.uc  3d_scan_fixed.uc  U.XI.28.fixed.uc  U.XI.28.uc  U.XI.29 copy.uc  U.XI.29.F.uc  U.XI.29.uc  U.XI.31.F.uc  U.XI.31.uc  U.XI.34.uc  U.XI.48.1.uc  U.XI.49.F.uc  U.XI.49.F2.uc  U.XI.91.uc  tn-1.uc  tn-10.uc  tn-12.uc  tn-2.uc  tn-3.uc  tn-7.uc  tn-9.uc  two_curves.uc  u.xi.112.uc  u.xi.19-design1.uc  u.xi.49.uc
web/data/ribbons/: U.XI.28.uc  nice-ge-pi.uc_fixed.uc  side1-blue.uc  side3-white.uc  side3-white_fixed.uc  side4-white.uc  side5-metal.uc  side5-metal_modified.uc  side6-drawing-cube.uc  side7-C15.uc  side7_fixed.uc  side8-C10.uc
web/data/weird_ones/: chess_rook.uc  flower.uc
web/js/: index.js
web/js/geom/: arc_curve.js  bezier_segments_curve.js  biarc_curve.js  curve.js  decoration_arc_curve.js  reconstructed_bezier_curve.js  reconstructed_biarc_curve.js  rmf.js
web/js/interaction/: add_vertical_line.js  change_layer_height.js  edit_decoration_point.js  keyboard.js  mouse.js  scale_background_image.js  set_prc.js
web/js/io/: OBJExporter.js  load_curves.js  save_curves.js
web/js/native/: native.js
web/js/state/: color_generator.js  params.js  state.js
web/js/utils/: camerautils.js  intersect.js  math_funcs.js  snapping.js
web/js/view/: add_face_mode.js  (+7 more)
(+123 files in other folders)
